Updated UI. Added Container resize. Added dynamic html injection

--- a/WebViewInScrollView/WebViewInScrollView/Base.lproj/Main.storyboard
+++ b/WebViewInScrollView/WebViewInScrollView/Base.lproj/Main.storyboard
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="WebViewInScrollView" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +17,64 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SMx-Np-aNG">
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ovF-V6-cLa" userLabel="ContentView">
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="road.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="ajV-ci-NgS">
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="321" id="T12-Ky-tkO"/>
+                                                </constraints>
+                                            </imageView>
+                                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Uah-U8-IRo">
+                                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="1" id="fpw-11-Ujr"/>
+                                                </constraints>
+                                            </webView>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="Uah-U8-IRo" secondAttribute="trailing" constant="8" id="IKF-W7-GNY"/>
+                                            <constraint firstItem="ajV-ci-NgS" firstAttribute="leading" secondItem="ovF-V6-cLa" secondAttribute="leading" id="IMM-BS-IXy"/>
+                                            <constraint firstItem="ajV-ci-NgS" firstAttribute="top" secondItem="ovF-V6-cLa" secondAttribute="top" id="WRZ-eP-oB6"/>
+                                            <constraint firstItem="Uah-U8-IRo" firstAttribute="leading" secondItem="ovF-V6-cLa" secondAttribute="leading" constant="8" id="cxG-Op-I5h"/>
+                                            <constraint firstAttribute="trailing" secondItem="ajV-ci-NgS" secondAttribute="trailing" id="fjy-s9-SPv"/>
+                                            <constraint firstItem="Uah-U8-IRo" firstAttribute="top" secondItem="ajV-ci-NgS" secondAttribute="bottom" constant="51" id="tVw-4b-LFU"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="ovF-V6-cLa" firstAttribute="leading" secondItem="SMx-Np-aNG" secondAttribute="leading" id="GAO-xo-Kqm"/>
+                                    <constraint firstAttribute="trailing" secondItem="ovF-V6-cLa" secondAttribute="trailing" id="nei-ux-RYn"/>
+                                    <constraint firstItem="ovF-V6-cLa" firstAttribute="top" secondItem="SMx-Np-aNG" secondAttribute="top" id="vQ4-cc-eqe"/>
+                                    <constraint firstAttribute="bottom" secondItem="ovF-V6-cLa" secondAttribute="bottom" id="xJy-v7-EBr"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="SMx-Np-aNG" secondAttribute="trailing" id="9Ee-dl-9wL"/>
+                            <constraint firstItem="ovF-V6-cLa" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" priority="750" id="IKH-GF-gr8"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="SMx-Np-aNG" secondAttribute="bottom" id="UBh-Vj-NRY"/>
+                            <constraint firstItem="ovF-V6-cLa" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="bbb-wn-5ZR"/>
+                            <constraint firstItem="SMx-Np-aNG" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="cyW-zd-ssD"/>
+                            <constraint firstItem="SMx-Np-aNG" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="lTg-tX-vSC"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="containerView" destination="ovF-V6-cLa" id="heP-gx-Eg3"/>
+                        <outlet property="contentHeightConstraint" destination="fpw-11-Ujr" id="dJ1-Kd-NKU"/>
+                        <outlet property="webView" destination="Uah-U8-IRo" id="UIQ-qF-gkv"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="117.59999999999999" y="122.78860569715144"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="road.jpg" width="1920" height="1080"/>
+    </resources>
 </document>
